unpackaged/main/default/objects/pse__Assignment__c/fields/Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours__c</fullName>
    <inlineHelpText>Actual Hours Submitted</inlineHelpText>
    <label>Actual Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>