unpackaged/main/default/objects/pse__Assignment__c/fields/Assigned_Resource__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Resource__c</fullName>
    <description>Read Only Field of assigned Resource of the Assignment</description>
    <formula>pse__Resource__r.FFX_Resource_Name__c</formula>
    <label>Assigned Resource</label>
    <type>Text</type>
</CustomField>