unpackaged/main/default/objects/pse__Assignment__c/fields/Assignment_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Assignment_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Assignment External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>