unpackaged/main/default/objects/pse__Assignment__c/fields/Assignment_Link__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Link__c</fullName>
    <formula>HYPERLINK("/" &amp; Id,  Name, '_self')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignment Link</label>
    <type>Text</type>
</CustomField>