unpackaged/main/default/objects/pse__Assignment__c/fields/FFX_Planner_Color__c.field-meta.xml
<CustomField>
    <fullName>FFX_Planner_Color__c</fullName>
    <description>Field used on Planners to show color coding.</description>
    <formula>IF(pse__Is_Billable__c , "lightBlue", 
IF( NOT(pse__Is_Billable__c) &amp;&amp;  ISPICKVAL(pse__Project__r.pse__Project_Type__c, "Customer Project"), "lightGreen", 
IF( ISPICKVAL(pse__Project__r.pse__Project_Type__c, "Paid Time Off"), "Pink",
IF(TEXT( pse__Project__r.Project_Sub_Types__c) = "Internal - Unavailability", "LightYellow",
 ""))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planner Color</label>
    <type>Text</type>
</CustomField>