unpackaged/main/default/objects/pse__Assignment__c/fields/Is_PM_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Is_PM_Current_User__c</fullName>
    <formula>pse__Project__r.psaws__Project_Manager_Is_Current_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is PM Current User</label>
    <type>Checkbox</type>
</CustomField>