unpackaged/main/default/objects/pse__Assignment__c/fields/Late_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Late_Assignment__c</fullName>
    <formula>pse__End_Date__c &lt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Late Assignment</label>
    <type>Checkbox</type>
</CustomField>