unpackaged/main/default/objects/pse__Assignment__c/fields/pse__Billable_Hours_Submitted__c.field-meta.xml
<CustomField>
    <fullName>pse__Billable_Hours_Submitted__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Billable Hours Submitted</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>