unpackaged/main/default/objects/pse__Assignment__c/fields/pse__Closed_for_Expense_Entry__c.field-meta.xml
<CustomField>
    <fullName>pse__Closed_for_Expense_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, indicates that Expense Reports and Expenses may no longer be entered for this Assignment.  Is checked automatically when the Assignment's Project is Closed for Expense Entry.</description>
    <label>Closed for Expense Entry</label>
    <type>Checkbox</type>
</CustomField>