unpackaged/main/default/objects/pse__Assignment__c/fields/pse__Cost_Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>pse__Cost_Rate_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Cost Rate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>