unpackaged/main/default/objects/pse__Assignment__c/fields/Remaining_Hours__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Hours__c</fullName>
    <description>Remaining Hours based on Planned or Scheduled.</description>
    <formula>pse__Scheduled_Hours__c -  (pse__Billable_Hours_Submitted__c + pse__Non_Billable_Hours_Submitted__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>