unpackaged/main/default/objects/pse__Assignment__c/fields/Role_Budget__c.field-meta.xml
<CustomField>
    <fullName>Role_Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role Budget</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Role_Budget__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.pse__Project__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.pse__Role__c</field>
            <operation>equals</operation>
            <valueField>Role_Budget__c.Role__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Role_Budget__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>