unpackaged/main/default/objects/pse__Assignment__c/fields/Role_Budget_Required__c.field-meta.xml
<CustomField>
    <fullName>Role_Budget_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated by FLOW</description>
    <inlineHelpText>This assignment requires a role budget.</inlineHelpText>
    <label>Role Budget Required?</label>
    <type>Checkbox</type>
</CustomField>