unpackaged/main/default/objects/pse__Assignment__c/fields/Scheduled_Hours_Clone__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Hours_Clone__c</fullName>
    <description>A copy of Scheduled Hours from the Schedule.</description>
    <label>Scheduled Hours Clone</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>