unpackaged/main/default/objects/pse__Assignment__c/fields/Task_Assignment_Hours__c.field-meta.xml
<CustomField>
    <fullName>Task_Assignment_Hours__c</fullName>
    <description>Populated by a Rollup. The total estimated hours from all task assignments related to the assignment from Bottom Up Planning.</description>
    <label>Task Assignment Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>