unpackaged/main/default/objects/pse__Assignment__c/fields/Time_Category__c.field-meta.xml
<CustomField>
    <fullName>Time_Category__c</fullName>
    <formula>IF( pse__Is_Billable__c , 'Billable',
IF( pse__Time_Credited__c , 'Credited',
IF( pse__Time_Excluded__c , 'Unavailable', 'Non-Billable' )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Category</label>
    <type>Text</type>
</CustomField>