unpackaged/main/default/objects/pse__Assignment__c/fields/Total_Hours_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Submitted__c</fullName>
    <formula>pse__Billable_Hours_Submitted__c +  pse__Non_Billable_Hours_Submitted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total billable + non billable/credited hours.</inlineHelpText>
    <label>Total Hours Submitted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>