unpackaged/main/default/objects/pse__Assignment__c/fields/Travel_Hours__c.field-meta.xml
<CustomField>
    <fullName>Travel_Hours__c</fullName>
    <description>Time recorded on travel hours</description>
    <label>Travel Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>