unpackaged/main/default/objects/pse__Assignment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billable</fullName>
                <default>true</default>
                <label>Billable</label>
            </value>
            <value>
                <fullName>Credited</fullName>
            </value>
            <value>
                <fullName>Non Billable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>