unpackaged/main/default/objects/pse__Assignment__c/fields/Unavailable_Project__c.field-meta.xml
<CustomField>
    <fullName>Unavailable_Project__c</fullName>
    <formula>ISPICKVAL( pse__Project__r.Project_Sub_Types__c , "Internal - Unavailability")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unavailable Project</label>
    <type>Checkbox</type>
</CustomField>