unpackaged/main/default/objects/pse__Assignment__c/validationRules/Assignment_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Assignment_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
        Remaining_Hours__c &gt; 0,
         IsPickval(pse__Status__c,'Closed')
     )</errorConditionFormula>
    <errorMessage>An assignment cannot be closed if there are remaining hours.</errorMessage>
</ValidationRule>