unpackaged/main/default/objects/pse__Assignment__c/validationRules/Assignment_Created_when_Project_in_Draft.validationRule-meta.xml
<ValidationRule>
    <fullName>Assignment_Created_when_Project_in_Draft</fullName>
    <active>true</active>
    <description>If a Project is still in Draft</description>
    <errorConditionFormula>ISNEW() &amp;&amp; (ISPICKVAL( pse__Project__r.pse__Stage__c, "Draft" ) || ISPICKVAL( pse__Project__r.pse__Stage__c, "Requested" ))</errorConditionFormula>
    <errorMessage>An Assignment can't be created when the Projects in Draft stage.</errorMessage>
</ValidationRule>