unpackaged/main/default/objects/pse__Assignment__c/validationRules/Assignment_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Assignment_End_Date</fullName>
    <active>true</active>
    <description>Assignment end date cannot be greater than project end date.</description>
    <errorConditionFormula>pse__End_Date__c &gt; pse__Project__r.pse__End_Date__c</errorConditionFormula>
    <errorMessage>Assignment end date cannot be greater than project end date.</errorMessage>
</ValidationRule>