unpackaged/main/default/objects/pse__Assignment__c/validationRules/Assignment_Scheduled_vs_Actual_Hours.validationRule-meta.xml
<ValidationRule>
    <fullName>Assignment_Scheduled_vs_Actual_Hours</fullName>
    <active>false</active>
    <errorConditionFormula>( pse__Billable_Hours_Submitted__c + pse__Non_Billable_Hours_Submitted__c ) &gt; pse__Scheduled_Hours__c</errorConditionFormula>
    <errorMessage>Hours Submitted can't exceed the amount of hours Scheduled on an Assignment</errorMessage>
</ValidationRule>