unpackaged/main/default/objects/pse__Assignment__c/validationRules/Cannot_change_RB_if_time_booked.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_RB_if_time_booked</fullName>
    <active>false</active>
    <description>Cannot change the role budget on an Assignment if timne has been booked.</description>
    <errorConditionFormula>AND (
        Not(isNull(Role_Budget__c )),
        isChanged(Role_Budget__c),
         Total_Hours_Submitted__c &gt; 0
     )</errorConditionFormula>
    <errorMessage>A role budget cannot be changed on an assignment if time has been submitted.</errorMessage>
</ValidationRule>