unpackaged/main/default/objects/pse__Assignment__c/validationRules/Insufficient_Role_Budget_Hours.validationRule-meta.xml
<ValidationRule>
    <fullName>Insufficient_Role_Budget_Hours</fullName>
    <active>false</active>
    <errorConditionFormula>pse__Scheduled_Hours__c &gt; Role_Budget__r.Available_Hours_to_Assign__c</errorConditionFormula>
    <errorMessage>There are not enough available hours for this Assignment. Please review your role budgets.</errorMessage>
</ValidationRule>