unpackaged/main/default/objects/pse__Assignment__c/validationRules/Planned_Hours_must_be_Populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Planned_Hours_must_be_Populated</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( pse__Planned_Hours__c )</errorConditionFormula>
    <errorDisplayField>pse__Planned_Hours__c</errorDisplayField>
    <errorMessage>Planned hours must be populated</errorMessage>
</ValidationRule>