unpackaged/main/default/objects/pse__Assignment__c/validationRules/Role_Budget_Role_Does_Not_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>Role_Budget_Role_Does_Not_Match</fullName>
    <active>false</active>
    <errorConditionFormula>AND ( 
      TEXT( pse__Role__c ) &lt;&gt; TEXT(Role_Budget__r.Role__c),
      Not(IsNull( Role_Budget__c))
      )</errorConditionFormula>
    <errorMessage>Role Budget Role and Assignment Role do not match.</errorMessage>
</ValidationRule>