unpackaged/main/default/objects/pse__Assignment__c/validationRules/Scheduled_Hours_Greater_than_Planned.validationRule-meta.xml
<ValidationRule>
    <fullName>Scheduled_Hours_Greater_than_Planned</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
       pse__Scheduled_Hours__c &gt;  Task_Assignment_Hours__c ,
        Not(IsNEW())
     )</errorConditionFormula>
    <errorMessage>Scheduled Hours cannot be greater than Planned Hours.</errorMessage>
</ValidationRule>