unpackaged/main/default/objects/pse__Assignment__c/validationRules/Scheduled_Hours_Less_than_Task_Hours.validationRule-meta.xml
<ValidationRule>
    <fullName>Scheduled_Hours_Less_than_Task_Hours</fullName>
    <active>false</active>
    <errorConditionFormula>pse__Scheduled_Hours__c &lt; Task_Assignment_Hours__c</errorConditionFormula>
    <errorMessage>You have scheduled less hours than planned. Please adjust the scheduled hours to match the planned hours.</errorMessage>
</ValidationRule>