unpackaged/main/default/objects/pse__Assignment__c/validationRules/TE_User_Close_Assignment.validationRule-meta.xml
<ValidationRule>
    <fullName>TE_User_Close_Assignment</fullName>
    <active>true</active>
    <description>Allows TE user to close assignments on ongoing projects.</description>
    <errorConditionFormula>AND ( 
     OR( 
         AND(
             IsChanged(pse__Status__c),
             ISPICKVAL(  pse__Status__c  , "Closed")
             ),
         IsChanged( pse__Closed_for_Time_Entry__c ),
         IsChanged( pse__Closed_for_Expense_Entry__c )
        ),
     NOT($Permission.PM_Edit_Start_End_Dates ),
     NOT(ISPICKVAL( pse__Project__r.Project_Sub_Types__c , "IBS - Ongoing Work"))
     )</errorConditionFormula>
    <errorMessage>You do not have permission to close this Assignment.</errorMessage>
</ValidationRule>