unpackaged/main/default/objects/pse__Assignment__c/listViews/Late_Assignments.listView-meta.xml
<ListView>
    <fullName>Late_Assignments</fullName>
    <columns>NAME</columns>
    <columns>pse__Role__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Scheduled_Hours__c</columns>
    <columns>Remaining_Hours__c</columns>
    <columns>pse__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Late_Assignment__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Is_PM_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Late Assignments</label>
</ListView>