unpackaged/main/default/objects/pse__Assignment__c/listViews/My_Group_Assignments.listView-meta.xml
<ListView>
    <fullName>My_Group_Assignments</fullName>
    <columns>NAME</columns>
    <columns>pse__Role__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Scheduled_Hours__c</columns>
    <columns>Remaining_Hours__c</columns>
    <columns>pse__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Status__c</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </filters>
    <filters>
        <field>MyGroup__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Group Assignments</label>
</ListView>