unpackaged/main/default/objects/pse__Assignment__c/listViews/My_Team_Unavailability.listView-meta.xml
<ListView>
    <fullName>My_Team_Unavailability</fullName>
    <columns>NAME</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Role__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Scheduled_Hours__c</columns>
    <columns>Actual_Hours__c</columns>
    <columns>Remaining_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MyGroup__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Unavailable_Project__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>pse__End_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>NEXT_N_DAYS:63</value>
    </filters>
    <filters>
        <field>pse__Status__c</field>
        <operation>equals</operation>
        <value>Scheduled,Tentative</value>
    </filters>
    <label>My Team Unavailability</label>
</ListView>