unpackaged/main/default/objects/pse__Assignment__c/listViews/psaws__My_Assignments.listView-meta.xml
<ListView>
    <fullName>psaws__My_Assignments</fullName>
    <columns>NAME</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Role__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Is_Billable__c</columns>
    <columns>pse__Bill_Rate__c</columns>
    <columns>pse__Scheduled_Hours__c</columns>
    <columns>Actual_Hours__c</columns>
    <columns>Remaining_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Status__c</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </filters>
    <filters>
        <field>psaws__Is_Resource_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Assignments</label>
</ListView>